--- a/karma_plugin/templates/karmareport.html
+++ b/karma_plugin/templates/karmareport.html
@@ -1,5 +1,7 @@
 {% extends "./base.html" %}
 
+
+{% block pagetitle %}{{ title }} Karma Report{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 {% endblock %}
@@ -8,7 +10,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm">
-      <h1>Karma report</h1>
+      <h1>{{ title }}</h1>
+      <h2>Karma report</h2>
     </div>
   </div>
   <div class="row">
@@ -44,6 +47,11 @@
           {% endfor %}
         </tbody>
       </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+        <p><small>Generated on {{ date }}</small></p>
     </div>
   </div>
 </div>
